<resources>
    <string name="app_name">Auth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaves_image">leaves image</string>
    <string name="mobile_number_hint">Mobile number</string>
    <string name="otp_hint">OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="continue_login">Sign In</string>
    <string name="placeholder">Lorem</string>
    <string name="seller_login">Continue As Seller</string>
    <string name="customer_login">Continue As Consumer</string>
    <string name="name_hint">Full Name</string>
    <string name="continue_signup">Sign Up</string>
    <string name="title_sms">SMS</string>
</resources>